Setup: simple login-barrier

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -9,6 +9,9 @@
       "components/*": [
         "src/components/*"
       ],
+      "utils/*": [
+        "src/utils/*"
+      ],     
       "functions/*": [
         "src/functions/*"
       ],
