--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "i": "^0.3.7",
+    "js-sha256": "^0.9.0",
+    "jsonwebtoken": "^8.5.1",
     "lottie-web": "^5.9.6",
     "npm": "^8.18.0",
     "react": "^18.2.0",
+    "react-cookies": "^0.1.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
