--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "ethers": "^5.7.0",
     "i": "^0.3.7",
     "js-sha256": "^0.9.0",
     "jsonwebtoken": "^8.5.1",
