--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,4 +1,3 @@
-
 {
   "compilerOptions": {
     "baseUrl": "src",
@@ -19,7 +18,7 @@
         "src/assets/*"
       ],
 			"context/*": [
-        "src/context/*"
+        "src/redux/*"
       ],
 			"redux/*": [
         "src/redux/*"
